; ModuleID = '/home/carl/AnghaBench/rofi/source/dialogs/extr_dmenu.c_bittoggle.c'
source_filename = "/home/carl/AnghaBench/rofi/source/dialogs/extr_dmenu.c_bittoggle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @bittoggle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bittoggle(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = urem i32 %7, 32
  store i32 %8, i32* %5, align 4
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = udiv i32 %10, 32
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds i32, i32* %9, i64 %12
  store i32* %13, i32** %6, align 8
  %14 = load i32, i32* %5, align 4
  %15 = shl i32 1, %14
  %16 = load i32*, i32** %6, align 8
  %17 = load i32, i32* %16, align 4
  %18 = xor i32 %17, %15
  store i32 %18, i32* %16, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
